--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 
     <div id="menu" class="fas fa-bars"></div>
 
-    <a href="http://www.isdp.info" class="logo"><i class="fas fa-user-graduate"></i>LOGO</a>
+    <a href="http://www.isdp.info" class="logo"><i class="fas fa-user-graduate"></i>ISDP</a>
 
     <nav class="navbar">
         <ul>
